# configs_loader_cpp

./: CMakeLists.txt  README.md
cmake/: ConfigsLoaderConfig.cmake.in  compiler_warnings.cmake
examples/: CMakeLists.txt  README.md  basic_example.cpp  global_configs.hpp  other_file.cpp
examples/01_basic/: CMakeLists.txt  basic_example.cpp
examples/02_cli/: cli_example.cpp
examples/03_help/: help_example.cpp
examples/04_global/: global_configs.hpp  global_main.cpp  other_file.cpp
examples/05_hierarchy/: README.md  hierarchy_example.cpp
examples/06_multi_file/: README.md  multi_file_example.cpp
examples/06_multi_file/config/: app_config.hpp
examples/06_multi_file/src/cache/: cache.cpp  cache.hpp  cache_config.hpp
examples/06_multi_file/src/database/: database.cpp  database.hpp  database_config.hpp
examples/06_multi_file/src/logging/: logger.cpp  logger.hpp  logging_config.hpp
examples/06_multi_file/src/server/: server_config.hpp
examples/07_real_world/: CMakeLists.txt  main.cpp
examples/07_real_world/include/app/: app_config.hpp  config_patterns.hpp
examples/07_real_world/include/cache/: cache.hpp  cache_config.hpp
examples/07_real_world/include/database/: connection_pool_config.hpp  database.hpp  database_config.hpp
examples/07_real_world/include/server/: server.hpp  server_config.hpp
examples/07_real_world/src/cache/: cache.cpp
examples/07_real_world/src/database/: database.cpp
examples/07_real_world/src/server/: server.cpp
examples/08_enum/: CMakeLists.txt  README.md  enum_example.cpp  enum_no_parser.cpp  enum_numeric_fallback.cpp
examples/08_unknown_flags/: CMakeLists.txt  README.md  unknown_flags_example.cpp
examples/09_enum/: CMakeLists.txt  README.md  enum_strict_parser.cpp  plain_enum_test.cpp
examples/basic/: basic_example.cpp
examples/cli/: CMakeLists.txt  cli_example.cpp
examples/global/: CMakeLists.txt  global_configs.hpp  global_main.cpp
examples/help/: CMakeLists.txt  help_example.cpp
examples/hierarchy/: CMakeLists.txt  README.md  hierarchy_example.cpp
examples/multi_file/: CMakeLists.txt  README.md  app_config.hpp  logging_config.hpp  multi_file_example.cpp  server_config.hpp
examples/multi_file/src/cache/: cache.hpp  cache_config.hpp
examples/multi_file/src/database/: database_config.hpp
examples/multi_file/src/logging/: logger.hpp
examples/multi_file/src/server/: server_config.hpp
examples/real_world/: README.md  main.cpp
examples/real_world/include/app/: app_config.hpp
examples/real_world/include/cache/: cache.hpp
examples/real_world/include/database/: connection_pool_config.hpp  database.hpp  database_config.hpp
examples/real_world/include/server/: server.hpp  server_config.hpp
examples/real_world/src/cache/: cache.cpp
examples/real_world/src/database/: database.cpp
examples/real_world/src/server/: server.cpp
include/: config.hpp  config_field.h  configs_loader.h  configs_loader.hpp  configs_loader_impl.hpp  help_colors.hpp  help_generator_impl.hpp
include/cli/: cli_argument_parser.hpp  cli_argument_parser_impl.hpp  config_applier.hpp  config_applier_impl.hpp
include/help/: help_colors.hpp  help_generator.hpp  help_generator_impl.hpp
include/parsers/: toml_parser.hpp
include/serialization/: cli_serializer.hpp  config_serializer.hpp  preset_deserializer.hpp  preset_deserializer_impl.hpp  serialization_format.hpp  serializer_factory.hpp  toml_deserializer.hpp  toml_serializer.hpp
include/validation/: config_validator.hpp  config_validator_impl.hpp
source/: configs_loader.cpp
src/: CMakeLists.txt  preset_parser.cpp
src/parsers/: preset_parser.cpp  toml_parser.cpp
src/serialization/: preset_parser.cpp  toml_parser.cpp
tests/: CMakeLists.txt  README.md  config_field_tests.cpp  config_tests.cpp  configs_loader_tests.cpp  toml_parser_tests.cpp
tests/cli/: cli_argument_parser_tests.cpp
tests/help/: help_generator_tests.cpp
tests/serialization/: toml_deserializer_tests.cpp
