add_executable(enum_example enum_example.cpp)
target_link_libraries(enum_example PRIVATE configs_loader_cpp)

add_executable(enum_numeric_fallback enum_numeric_fallback.cpp)
target_link_libraries(enum_numeric_fallback PRIVATE configs_loader_cpp)

add_executable(enum_no_parser enum_no_parser.cpp)
target_link_libraries(enum_no_parser PRIVATE configs_loader_cpp)

add_executable(plain_enum_test plain_enum_test.cpp)
target_link_libraries(plain_enum_test PRIVATE configs_loader_cpp)

add_executable(enum_strict_parser enum_strict_parser.cpp)
target_link_libraries(enum_strict_parser PRIVATE configs_loader_cpp)
